  buildReports gradle build task now defines input and output, UP-TO-DATE works now
  buildTime property added to org/jminor/common/version.properties before common.core jar is created, org.jminor.common.Version updated accordingly
  3d party libraries upgraded
  Minor refactoring of EntityInputProvider, IntegerInputProvider and LongInputProvider
  SwingTableSelectionModel.getSelectedIndexes() now returns right away if selection is empty
  EntityGeneratorModel, 'Properties.' prefix removed, assumes static import of org.jminor.framework.domain.Properties.*
  Sonarqube run
  EntityApplicationPanel.showEntityPanelDialog() bug fixed, now calls savePreferences() on both the panel and model when closing the dialog
  IntelliJ code analysis run
  Entity.Validator.performLengthValidation() added, implemented and used in Entities.Validator
  H2Database upgraded to 1.4.198, plus some minor refactoring
0.11.7 [client/server incompatible with earlier versions due to EntityConditions changes]
  Conditions.stringCondition() moved to EntityConditions, due to serialization related bug
  EntityPanel bug fixed, double clicking on a detail tab in a dialog now embeds the detail panel, instead of closing it
  OracleDatabase, now requires jminor.db.oracle.useLegacySID=true in case of pre-containerized Oracle databases (<12)
  AbstractEntityConnectionProvider, improved synchronization on a lock object, validityCheckScheduler now uses an initial delay
  AbstractEntityConnectionProvider, connection validity check scheduler moved to DefaultEntityApplicationModel
  NavigableImagePanel.centerImage(Point) and centerImage(Coordinates) added
  Controls.toggleControl() overloaded with name parameter
  SerializationWhitelist now supports simple wildcard entries org.jminor.* or org.jminor.common.Value*
  A couple of third party dependencies upgraded
  EntityUiUtil.createEastButtonPanel() moved to UiUtil, button size now follows preferred size of centerComponent